<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:hint="@string/teamView1"
        android:id="@+id/teamView1"
        />

    <EditText
        android:layout_below="@id/teamView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/teamName"
        android:id="@+id/teamName"
        android:paddingTop="8dp"/>

    <TextView
        android:layout_below="@id/teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:hint="@string/textView1"
        android:id="@+id/textView1"
        android:paddingTop="16dp"/>

    <EditText
        android:layout_below="@id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member1"
        android:id="@+id/editText_Name1"
        android:paddingTop="8dp"/>

    <EditText
        android:layout_below="@id/editText_Name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member_entry1"
        android:id="@+id/editText_Entry1" />

    <TextView
        android:layout_below="@id/editText_Entry1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:hint="@string/textView2"
        android:id="@+id/textView2"
        android:paddingTop="16dp"
        />

    <EditText
        android:layout_below="@id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member2"
        android:id="@+id/editText_Name2"
        android:paddingTop="8dp"/>

    <EditText
        android:layout_below="@id/editText_Name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member_entry2"
        android:id="@+id/editText_Entry2" />

    <TextView
        android:layout_below="@id/editText_Entry2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:hint="@string/textView3"
        android:id="@+id/textView3"
        android:paddingTop="16dp"
        />

    <EditText
        android:layout_below="@id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member3"
        android:id="@+id/editText_Name3"
        android:paddingTop="8dp"/>

    <EditText
        android:layout_below="@id/editText_Name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/member_entry3"
        android:id="@+id/editText_Entry3" />

    <Button
        android:text="@string/send_button"
        android:layout_below="@id/editText_Entry3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitMessage"/>

</RelativeLayout>
